<?php
class User
{
    public int $id = 0;
    public string $name = "";
    public string $surname = "";
    public string $mail = "";
    public string $country = "";

    public function getFullname(): string {
        return $this->name . " " . $this->surname;
    }
}