<?php
require_once 'Db.php';
require_once 'User.php';

class UserStorage {

    /**
     * @return User[]
     */
    public function getAll(): array
    {
        return Db::conn()
            ->query("SELECT * FROM users")
            ->fetchAll(PDO::FETCH_CLASS, User::class);
    }

    public function get($id): ?User {
        $statement = Db::conn()->prepare("SELECT * FROM users WHERE id = ?");
        $statement->execute([$id]);
        $statement->setFetchMode(PDO::FETCH_CLASS, User::class);
        $user = $statement->fetch();
        if ($user === false) {
            return null;
        }
        return $user;
    }

    public function store(User $user): void {
        //Insert
        if ($user->id == 0) {
            $sql = "INSERT INTO users (name, surname, mail, country) VALUES (?, ?, ?, ?)";
            Db::conn()->prepare($sql)->execute([$user->name, $user->surname, $user->mail, $user->country]);
        }
        //Update
        else {
            $sql = "UPDATE users SET name = ?, surname = ?, mail = ?, country = ? WHERE id = ?";
            Db::conn()->prepare($sql)->execute([$user->name, $user->surname, $user->mail, $user->country, $user->id]);
        }
    }

    public function delete(User $user): void {
        $sql = "DELETE FROM users WHERE id = ?";
        Db::conn()->prepare($sql)->execute([$user->id]);
    }
}
